# second-brain

./: .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  HANDOFF.md  PRD.md  README.md  product-brief.md  pyproject.toml  requirements.txt
.cursor/agents/: platform-implement-backlog.md  platform-research-reviewer.md  platform-transcript-librarian.md  research-reviewer.md
.cursor/rules/: agents.mdc  platform-research-safety.mdc  second-brain-research-safety.mdc
.github/: copilot-instructions.md
.github/agents/: adr-generator.agent.md  platform-transcript-librarian.agent.md  workspace-adr-generator.agent.md
.github/hooks/: README.md
.github/prompts/: align-cite.prompt.md  align-closure.prompt.md  align-conformance.prompt.md  align-coverage.prompt.md  align-vendor-truth.prompt.md  architect-agent.prompt.md  archive.prompt.md  compile.prompt.md  engineer-agent.prompt.md  ingest-confluence.prompt.md  ingest-vendor-doc.prompt.md  lint.prompt.md  platform-implement-backlog.prompt.md  platform-research-review.prompt.md  platform-sync-support-docs.prompt.md  platform-transcript-librarian.prompt.md  pm-agent.prompt.md  prepare-for-confluence.prompt.md  publish-to-confluence.prompt.md  publish.prompt.md  query.prompt.md  research-review.prompt.md  second-brain.prompt.md  start-project.prompt.md  unarchive.prompt.md  vp-agent.prompt.md  workspace-align-cite.prompt.md  workspace-align-closure.prompt.md  workspace-align-conformance.prompt.md  workspace-align-coverage.prompt.md  workspace-align-rss-impact.prompt.md  workspace-align-vendor-truth.prompt.md  workspace-architect-agent.prompt.md  workspace-architect-reviewer-agent.prompt.md  workspace-archive.prompt.md  workspace-compile.prompt.md  workspace-engineer-agent.prompt.md  workspace-ingest-confluence.prompt.md  workspace-ingest-rss.prompt.md  workspace-ingest-vendor-doc.prompt.md  (+15 more)
config/: anthropic-seed-stack.yml  aws-in-scope-services.yml  aws-seed-stack.yml  github-seed-stack.yml  ibm-db2-zos-in-scope-services.yml  ibm-db2-zos-seed-stack.yml  microsoft-365-copilot-seed-stack.yml  microsoft-365-seed-stack.yml  microsoft-copilot-studio-seed-stack.yml  openai-seed-stack.yml  platform-research-review.example.yml  research-review.example.yml  rss-feeds.example.yml  second-brain.example.yml  snowflake-in-scope-services.yml  snowflake-seed-stack.yml  vendor-seed-stack.yml
docs/: adoption-checklist.md  architecture-rationale.md  phase-1a-exit-report.md  phase-2-exit-report.md  phase-2-plan.md  progress-log.md  roadmap.md  setup-kit.md  vendor-catalog.md
examples/: README.md
quarantine/: README.md
raw/: README.md
scripts/: README.md  _vendor_fetch.py  compile-workspace-external.py  ingest-rss.py  lint-platform-research.py  lint-platform-support-docs.py  lint-research.py  lint-workspace.py  promote-platform-adr.py  promote-rss-item.py  repair-rss-item-frontmatter.py  revalidate-vendor-docs.py  rss_common.py  seed-vendor-docs.py  support_doc_common.py  sync-rejected-register.py  sync-rss-register.py  sync-support-doc-inventory.py  sync-transcript-register.py  triage-rss.py  update-rss-inbox.py  verify-setup.py
(+547 files in other folders)
